--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
   margin-top: 50px;
   max-width: 500px;
   border-radius: 10px;
-  padding: 15px;
+  padding: 10px;
+  background-color: #fcf9f5;
 }
 #weather-emoji {
   font-size: 35px;
@@ -40,13 +41,17 @@ h2 {
   color: white;
   background-color: rgb(32, 32, 255);
   border-color: rgb(32, 32, 255);
-  border-radius: 4px;
+  border-radius: 15px;
+  border: none;
+  width: 80px;
 }
 #current-button {
   color: white;
-  background-color: rgb(23, 189, 5);
-  border-color: rgb(23, 189, 5);
-  border-radius: 4px;
+  background-color: #ec6e4c;
+  border-color: #ec6e4c;
+  border-radius: 15px;
+  border: none;
+  width: 80px;
 }
 .group {
   margin: 12px;
@@ -60,6 +65,7 @@ h2 {
 }
 #input-city {
   flex: 1;
+  border-radius: 15px;
 }
 #cel {
   display: inline-block;
@@ -103,7 +109,20 @@ ul {
 #open-source-link {
   text-decoration: none;
 }
-.weather-forecast-temp-min {
+
+#forecast {
+  text-align: center;
+}
+#code-link {
+  margin-left: 0px;
+}
+.weather-forecast-temperatures {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-size: 15px;
+}
+.weather-forecast-temperature-min {
   color: grey;
-  padding-left: 4px;
 }
